[package]
name = "bankirpay_lib"
version = "0.1.0"
edition = "2024"
build = "src/build.rs"
[dependencies]
tokio = {version = "1.44.2", features = ["full"]}
serde = {version = "1.0.219", features = ["default", "derive"] }
axum = {version = "0.8.3", features = ["default", "tokio"]}
tonic = "0.13.0"
prost = {version = "0.13.5", features = ["default"]}
prost-types = {version = "0.13.5", features = ["default"]}
rust_decimal = {version = "1.37.1", features = ["db-tokio-postgres", "macros"]}
tonic-build = {version = "0.13.0", features = ["default"]}
redis = {version = "0.29.5", features = ["default", "r2d2", "tokio-comp"]}
jsonwebtoken = {version = "9.3.1", features = ["default"]}
once_cell = "1.21.3"
uuid = { version = "1.16.0", features = ["v7"] }
deadpool-redis = "0.20.0"
tracing = "0.1.41"
deadpool = {version = "0.12.2", features = ["default", "rt_tokio_1"]}
async-trait = "0.1.88"
rdkafka = "0.37.0"
deadpool-postgres = "0.14.1"
tokio-postgres = {version = "0.7.13", features = ["with-chrono-0_4"]}
chrono = {version = "0.4.40", features = ["serde"]}
rsa = {version = "0.9.8", features = ["default", "sha2"]}
base64 = "0.22.1"
http-body-util = "0.1.3"
[build-dependencies]
tonic-build = "0.13.0"
